// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPreferencesPage should match the snapshot, display into a desktop viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <div>
      React Helmet Async
    </div>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <h1
      class="title fr-h3 fr-mb-2w fr-text--bold"
    >
      Pourquoi gérer mes accès dans FranceConnect ?
    </h1>
    <p
      class="is-normal fr-mb-5v"
    >
      Pour mieux contrôler votre usage de FranceConnect et vous protéger en cas de vol de vos identifiants, vous pouvez bloquer l’utilisation des comptes que vous n’utilisez pas. 
      <strong>
        Ils seront toujours visibles sur la page de sélection de compte mais FranceConnect empêchera la connexion d’aboutir. 
      </strong>
      Vous pourrez les réactiver à n’importe quel moment depuis cette page.
    </p>
    <p
      class="is-normal"
    >
      Ces comptes resteront disponibles sur leur service d’origine, par exemple : 
      <strong>
        si vous bloquez le compte Impôts dans FranceConnect, votre compte Impôts reste utilisable sur le site impots.gouv.fr sans passer par FranceConnect.
      </strong>
    </p>
    <p
      class="title fr-h6 fr-mt-4w fr-mb-2w fr-text--bold"
    >
      En images :
    </p>
    <div
      class="flex-wrapper flex-between"
    >
      <div
        class="tutoriel fr-mb-5w"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          1. Un usurpateur tente de se connecter à Service-Public.fr
        </strong>
        <img
          alt="Tentative de connexion"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-01.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel fr-mb-5w"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          2. L’usurpateur tente d’utiliser un compte préalablement bloqué
        </strong>
        <img
          alt="Utilisation d'un compte bloqué"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-02.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          3. L’usurpateur parvient à s’identifier
        </strong>
        <img
          alt="Identification"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-03.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          4. FranceConnect bloque la connexion
        </strong>
        <img
          alt="Usurpateur bloqué"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-04.png"
          width="350"
        />
      </div>
    </div>
    <div>
      UserPreferencesComponent
    </div>
  </div>
</div>
`;

exports[`UserPreferencesPage should match the snapshot, display into a mobile viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <div>
      React Helmet Async
    </div>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <h1
      class="title fr-h3 fr-mb-2w fr-text--bold"
    >
      Pourquoi gérer mes accès dans FranceConnect ?
    </h1>
    <p
      class="is-normal fr-mb-5v"
    >
      Pour mieux contrôler votre usage de FranceConnect et vous protéger en cas de vol de vos identifiants, vous pouvez bloquer l’utilisation des comptes que vous n’utilisez pas. 
      <strong>
        Ils seront toujours visibles sur la page de sélection de compte mais FranceConnect empêchera la connexion d’aboutir. 
      </strong>
      Vous pourrez les réactiver à n’importe quel moment depuis cette page.
    </p>
    <p
      class="is-normal"
    >
      Ces comptes resteront disponibles sur leur service d’origine, par exemple : 
      <strong>
        si vous bloquez le compte Impôts dans FranceConnect, votre compte Impôts reste utilisable sur le site impots.gouv.fr sans passer par FranceConnect.
      </strong>
    </p>
    <p
      class="title fr-h6 fr-mt-4w fr-mb-2w fr-text--bold"
    >
      En images :
    </p>
    <div
      class="flex-wrapper flex-between"
    >
      <div
        class="tutoriel fr-mb-5w"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          1. Un usurpateur tente de se connecter à Service-Public.fr
        </strong>
        <img
          alt="Tentative de connexion"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-01.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel fr-mb-5w"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          2. L’usurpateur tente d’utiliser un compte préalablement bloqué
        </strong>
        <img
          alt="Utilisation d'un compte bloqué"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-02.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          3. L’usurpateur parvient à s’identifier
        </strong>
        <img
          alt="Identification"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-03.png"
          width="350"
        />
      </div>
      <div
        class="tutoriel"
      >
        <strong
          class="fr-text--md is-block fr-mb-1w"
        >
          4. FranceConnect bloque la connexion
        </strong>
        <img
          alt="Usurpateur bloqué"
          class="shadow-bottom"
          src="/images/user-preferences-tutoriel-04.png"
          width="350"
        />
      </div>
    </div>
    <div>
      UserPreferencesComponent
    </div>
  </div>
</div>
`;
